--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
 
      <section class="third-section">
        <div class="row">
-         <div class="col-12 texto-botones">
+         <div class="col-md-12 texto-botones">
            <h1>Buttons</h1>
          </div>
        </div>
 
        <div class="row">
 
-         <div class="col-12">
+         <div class="col-md-12">
            <!-- Standard button -->
            <button type="button" class="btn btn-default">Default</button>
 
@@ -98,7 +98,7 @@
 
        <div class="row">
 
-         <div class="col-12">
+         <div class="col-md-12">
            <!-- Standard button -->
            <button type="button" class="btn btn-default  btn-2">Default</button>
 
@@ -124,7 +124,7 @@
 
        <div class="row">
 
-         <div class="col-12">
+         <div class="col-md-12">
            <!-- Standard button -->
            <button type="button" class="btn btn-default btn-3">Default</button>
 
@@ -150,7 +150,7 @@
 
        <div class="row">
 
-         <div class="col-12">
+         <div class="col-md-12">
            <!-- Standard button -->
            <button type="button" class="btn btn-default btn-4">Default</button>
 
@@ -347,7 +347,7 @@
        </div>
 
        <div class="row">
-         <div class="col-12">
+         <div class="col-xs-12">
            <h3 class="labe h1">
              <span class="label label-default">Default</span>
              <span class="label label-primary">Primary</span>
@@ -358,7 +358,7 @@
            </h3>
          </div>
 
-         <div class="col-12">
+         <div class="col-sm-12">
            <h3 class="labe h2">
              <span class="label label-default">Default</span>
              <span class="label label-primary">Primary</span>
@@ -369,7 +369,7 @@
            </h3>
          </div>
 
-         <div class="col-12">
+         <div class="col-sm-12">
            <h3 class="labe h3">
              <span class="label label-default">Default</span>
              <span class="label label-primary">Primary</span>
@@ -380,7 +380,7 @@
            </h3>
          </div>
 
-         <div class="col-12">
+         <div class="col-sm-12">
            <h3 class="labe h4">
              <span class="label label-default">Default</span>
              <span class="label label-primary">Primary</span>
@@ -391,7 +391,7 @@
            </h3>
          </div>
 
-         <div class="col-12">
+         <div class="col-sm-12">
            <h3 class="labe h5">
              <span class="label label-default">Default</span>
              <span class="label label-primary">Primary</span>
@@ -402,7 +402,7 @@
            </h3>
          </div>
 
-         <div class="col-12">
+         <div class="col-sm-12">
            <h3 class="labe h6">
              <span class="label label-default">Default</span>
              <span class="label label-primary">Primary</span>
