--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
        </div>
 
        <div class="row">
-         <div class="col-xs-12">
+         <div class="col-sm-12">
            <h3 class="labe h1">
              <span class="label label-default">Default</span>
              <span class="label label-primary">Primary</span>
